--- a/papers/asprs2017.tex
+++ b/papers/asprs2017.tex
@@ -190,10 +190,10 @@ positive quantities. Figure \ref{fig:vanilla_pred_meas}a shows the average
 predicted and measured CE90/LE90 for each $N$ across the $k=100$ MIGs for that
 $N$. To clarify the rate of convergence and separation of the curves, a
 logarithmic scale is used. (The measured errors are adjusted with a finite
-population correction of $\sqrt{(1000-N)/(1000-1)}$. The deviation of the
-measured errors from prediction near 1000 is believed to be due to limitations
-of the finite population correction when applied to a 90\% statistic rather than
-a 1-sigma standard devation.)
+population correction of $\sqrt{(1000-N)/(1000-1)}$ \cite{FPC}. The deviation of
+the measured errors from prediction near 1000 is believed to be due to
+limitations of the finite population correction when applied to a 90\% statistic
+rather than a 1-sigma standard devation.)
 
 In order to demonstrate the $1/\sqrt{N}$ behavior of MIG error, Figure
 \ref{fig:vanilla_pred_meas}b scales each point from Figure
@@ -236,7 +236,7 @@ and slicing height space sufficiently thin to achieve a desired vertical
 resolution, we attempt some theoretical underpinnings for this technique that
 will allow a more efficient and precise solution.
 
-\subsection{Computing height of minimum spread}
+\subsection{Computing height of minimum spread\label{poly}}
 Assume two heights $z_{+} > z_{-}$, and assume a set of $N$ 3D lines $L_i$, none
 of which is horizontal (without loss of generality, we use horizontal planes. If
 necessary, the ray bundle can be rotated into a coordinate system so that the
@@ -478,6 +478,17 @@ In conclusion, we conclude.
 \bibitem{MIN}Dolloff, John, and Reuben Settergren, 2010. Worldview-1 Stereo
   Extraction Accuracy With and Without MIN Processing, In: {\em Proc. ASPRS}, 2010.
 
+\bibitem{PHOTO_CV}F\"orstner, Wolfgang, and Bernhard P.~Wrobel, 2016. {\em
+  Photogrammetric Computer Vision}, Springer.
+
+\bibitem{GITHUB} {\tt
+  https://github.com/sethmerickel/Multi-Image-Geopositioning}. The
+  implementation of Hourglassing described in section \ref{poly} is available,
+  as well as sample data.
+
+\bibitem{H_AND_J}Horn, Roger, and Charles R. Johnson, 2012. {\em Matrix
+  Analysis}, 2nd ed. Cambridge University Press, p. NNN?
+
 \bibitem{JEONG_SIX}Jeong, Jaehoon, Chansu Yang, Taejung Kim, 2015. Geo-positioning
   accuracy using multiple-satellite images: IKONOS, QuickBird, and KOMPSAT-2
   Stereo Images, {\em Remote Sensing} 7(4), pp.~4549-64.
@@ -487,6 +498,9 @@ In conclusion, we conclude.
   2001. {\em Modern Photogrammetry}, Wiley, New York.
 
 \bibitem{SGXP}SOCET GXP, {\tt http://geospatialexploitationproducts.com}
+
+\bibitem{FRESNO}Settergren, Reuben, Seth Merickel and Stewart Walker, Title?
+  Available online \cite{GITHUB}
 
 \bibitem{PLANE_SWEEP}Szeliski, Richard, 2011. {\em Computer Vision}, Springer,
   London, p. 474.
